# DocKar

./: README.md  pyproject.toml  scope_mvp.md
cli/: __init__.py  main.py
config/: default.yaml
dockar/: __init__.py
dockar/chunking/: __init__.py  fixed.py  interfaces.py
dockar/config/: __init__.py  loader.py  models.py
dockar/evaluation/: __init__.py  evaluator.py  interfaces.py
dockar/execution/: __init__.py  executor.py  interfaces.py  llm.py
dockar/ingestion/: __init__.py  interfaces.py  loader.py  pdf.py
dockar/logging/: __init__.py  setup.py
dockar/loop/: __init__.py  interfaces.py
dockar/models/: __init__.py  document.py  llm.py
dockar/ocr/: __init__.py  interfaces.py  tesseract.py
dockar/postprocessing/: __init__.py  interfaces.py  processor.py
dockar/prompt_engine/: __init__.py  builder.py  generator.py  interfaces.py  mutator.py
tests/: test_chunker.py  test_config_loader.py  test_document_loader.py  test_evaluator.py  test_executor.py  test_imports.py  test_llm_clients.py  test_postprocessor.py  test_prompt_engine.py
