[tool.poetry]
name = "dockar"
version = "0.1.0"
description = "Self-improving document extraction system with CLI and SDK interfaces."
authors = ["DocKar Contributors"]
readme = "README.md"
packages = [
  { include = "dockar" },
  { include = "cli" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
pyyaml = "^6.0.1"
typer = { version = "^0.12.3", extras = ["all"] }
httpx = "^0.27.0"
structlog = "^24.1.0"
pymupdf = "^1.24.5"
pytesseract = "^0.3.10"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-PyYAML = "^6.0.12.20240311"

[tool.poetry.scripts]
dockar = "cli.main:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
